--- a/branches/kalypso_11.06/KalypsoModelWspmTuhhUI/plugin.properties
+++ b/branches/kalypso_11.06/KalypsoModelWspmTuhhUI/plugin.properties
@@ -65,3 +65,5 @@ command.name.7=Open in WspWin Plotter
 command.name.6=WspWin Plotter
 
 org.kalypso.model.wspm.tuhh.ui.wizards.WspWinExportGmlWizard.name = WspWin Project
+org.kalypso.model.wspm.ui.commands.toggleWaterlevelRestrictionMarker.name=Show water levels outside of model boundary
+org.kalypso.model.wspm.ui.commands.toggleWaterlevelRestrictionMarker.description=Toggles if water levels should be painted outside the model boundary
