New export wizard that exports profile in the tripple format.

--- a/KalypsoModelWspmTuhhUI/plugin.properties
+++ b/KalypsoModelWspmTuhhUI/plugin.properties
@@ -67,3 +67,6 @@ command.name.6=WspWin Plotter
 org.kalypso.model.wspm.tuhh.ui.wizards.WspWinExportGmlWizard.name = WspWin Project
 org.kalypso.model.wspm.ui.commands.toggleWaterlevelRestrictionMarker.name=Show water levels outside of model boundary
 org.kalypso.model.wspm.ui.commands.toggleWaterlevelRestrictionMarker.description=Toggles if water levels should be painted outside the model boundary
+
+org.kalypso.model.wspm.tuhh.ui.export.tripple.TrippleExportProfilesWizard.name=Triples (.txt)
+org.kalypso.model.wspm.tuhh.ui.export.tripple.TrippleExportProfilesWizard.description=Export points of selected profiles in triple format.
