--- a/trunk/KalypsoOptimize/.settings/org.eclipse.jdt.core.prefs
+++ b/trunk/KalypsoOptimize/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Mon May 03 10:07:00 CEST 2010
+#Tue Nov 08 14:44:09 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.builder.cleanOutputFolder=clean
 org.eclipse.jdt.core.builder.duplicateResourceTask=warning
@@ -336,3 +336,4 @@ org.eclipse.jdt.core.formatter.use_tabs_only_for_leading_indentations=false
 org.eclipse.jdt.core.formatter.wrap_before_binary_operator=true
 org.eclipse.jdt.core.incompatibleJDKLevel=warning
 org.eclipse.jdt.core.incompleteClasspath=error
+org.eclipse.objectteams.otdt.compiler.option.pure_java=enabled
