--- a/branches/hwv_sn_st_11-02/KalypsoModelRCM/build.properties
+++ b/branches/hwv_sn_st_11-02/KalypsoModelRCM/build.properties
@@ -5,7 +5,9 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                about.html,\
-               lib/
+               lib/,\
+               etc/
 src.includes = scripts/,\
-               about.html
+               about.html,\
+               etc/
 jars.compile.order = .,lib/anttasks.jar
