--- a/trunk/KalypsoModelNA/plugin.xml
+++ b/trunk/KalypsoModelNA/plugin.xml
@@ -361,7 +361,7 @@
            point="org.eclipse.wst.xml.core.catalogContributions">
         <catalogContribution>
            <nextCatalog
-                 catalog="src/org/kalypso/convert/namodel/schema/catalog.xml">
+                 catalog="etc/catalog.xml">
            </nextCatalog>
         </catalogContribution>
      </extension>
