--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -227,6 +227,8 @@
          <image icon="icons/commands/copyCalcCase.gif" commandId="org.kalypso.ui.rrm.command.calccase.copyCalcCase"/>
          <image icon="icons/commands/createCalcCase.gif" commandId="org.kalypso.ui.rrm.command.calccase.newCalcCase"/>
          <image icon="icons/commands/export-simple-template.gif" commandId="org.kalypso.ui.rrm.command.calccase.setBasicModel"/>
+         
+         <image icon="icons/timeseries/timeseriesManagementView.gif" commandId="org.kalypso.model.rrm.timeseriesManagement"/>
  </extension>
  <extension
        point="org.eclipse.ui.handlers">
@@ -416,12 +418,16 @@
    
    <!-- Handler for workflow -->
    <extension point="org.eclipse.ui.commands">
-            <command id="org.kalypso.model.rrm.timeseriesManagement" name="" />
+            <command id="org.kalypso.model.rrm.timeseriesManagement" name="Test" />
+   </extension>
+   <extension point="org.eclipse.ui.commandImages">
+            <image commandId="org.kalypso.model.rrm.timeseriesManagement" icon="icons/timeseries/timeseriesManagementView.gif"/>
    </extension>
    
    <extension point="org.eclipse.ui.handlers">
-      <handler commandId="org.kalypso.model.rrm.timeseriesManagement">
-        <class class="org.kalypso.ui.rrm.internal.timeseries.view.TimeseriesManagementTaskHandler"/>
+      <handler
+            class="org.kalypso.ui.rrm.internal.timeseries.view.TimeseriesManagementTaskHandler"
+            commandId="org.kalypso.model.rrm.timeseriesManagement">
       </handler>
    </extension>
 </plugin>
