--- a/trunk/KalypsoModelNA/etc/schema/gml/timeseriesManagement.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/timeseriesManagement.properties
@@ -7,6 +7,12 @@ tm_HydrologicalStation_name=hydrological Station
 tm_MeteorologicalStation_name=meteorological Station
 tm_MeteorologicalStation_label=${property:description;-description not set-} (${listProperty:name;0;})
 
+tm_AbstractStation_gml_name_label=Reference Code
+tm_AbstractStation_gml_name_tooltip=Reference Code
+
+tm_AbstractStation_gml_description_label=Name
+tm_AbstractStation_gml_description_tooltip=Name
+
 tm_AbstractStation_tm_comment_label=Comment
 tm_AbstractStation_tm_comment_tooltip=Comment
 tm_AbstractStation_tm_location_label=Location
