--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -281,7 +281,7 @@
             icon="icons/timeseries/propertiesView.gif"
             id="org.kalypso.ui.rrm.internal.timeseries.view.TimeseriesPropertiesView"
             name="Properties"
-            restorable="true">
+            restorable="false">
       </view>
    </extension>
    
