Regorganized KalypsoUIRrm package structure.

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -21,7 +21,7 @@ org.kalypso.ui.rrm.command.calccase.newCalcCase.tooltip=Creates new calculation 
 org.kalypso.ui.rrm.command.calccase.setBasicModel.label=Transfer to basic model...
 org.kalypso.ui.rrm.command.calccase.setBasicModel.tooltip=Takes the model from the calculation case as basic model 
 
-org.kalypso.ui.rrm.wizards.KalypsoNAProjectWizard.description = Creates a new KalypsoHydrology Model. The wizards allows to import some of the base data (catchments, hydrotops) from ESRI-Shape files.
+org.kalypso.ui.rrm.internal.newproject.KalypsoNAProjectWizard.description = Creates a new KalypsoHydrology Model. The wizards allows to import some of the base data (catchments, hydrotops) from ESRI-Shape files.
 org.kalypso.ui.rrm.commandCategory.description = KalypsoHydrology Commands
 org.kalypso.ui.rrm.commandCategory.name = KalypsoHydrology
 org.kalypso.ui.rrm.logviewer.LogViewer.name=Log View
