--- a/trunk/KalypsoModelNA/build.properties
+++ b/trunk/KalypsoModelNA/build.properties
@@ -1,13 +1,12 @@
 bin.includes = META-INF/,\
-               lib/,\
                .classpath,\
                .,\
                plugin.xml,\
                META-INF/,\
                about.html,\
-               plugin.properties
+               plugin.properties,\
+               etc/catalog.xml
 jars.compile.order = .
-src.includes = lib/,\
-               readme.txt,\
+src.includes = readme.txt,\
                about.html
 source.. = src/
