Introduced group to stations

--- a/KalypsoModelNA/etc/schema/gml/timeseriesManagement.properties
+++ b/KalypsoModelNA/etc/schema/gml/timeseriesManagement.properties
@@ -15,6 +15,8 @@ tm_AbstractStation_gml_description_tooltip=Name
 
 tm_AbstractStation_tm_comment_label=Comment
 tm_AbstractStation_tm_comment_tooltip=Comment
+tm_AbstractStation_tm_group_label=Group
+tm_AbstractStation_tm_group_tooltip=Stations will be sorted by their group name
 tm_AbstractStation_tm_location_label=Location
 tm_AbstractStation_tm_location_tooltip=Location
 tm_AbstractStation_tm_measurementStart_label=Measurement Start
