catchment model, schema, binding classes, generator

--- a/KalypsoModelRCM/plugin.xml
+++ b/KalypsoModelRCM/plugin.xml
@@ -51,6 +51,22 @@
             class="org.kalypso.model.rcm.internal.binding.Target"
             qname="{org.kalypso.model.rcm.v2}Target">
       </feature>
+      <feature
+            class="org.kalypso.model.rcm.internal.binding.CatchmentModel"
+            qname="{org.kalypso.model.cm}CatchmentModel">
+      </feature>
+      <feature
+            class="org.kalypso.model.rcm.internal.binding.CatchmentGenerator"
+            qname="{org.kalypso.model.cm}CatchmentGenerator">
+      </feature>
+      <feature
+            class="org.kalypso.model.rcm.internal.binding.Catchment"
+            qname="{org.kalypso.model.cm}Catchment">
+      </feature>
+      <feature
+            class="org.kalypso.model.rcm.internal.binding.FactorizedTimeseries"
+            qname="{org.kalypso.model.cm}FactorizedTimeseries">
+      </feature>
    </extension>
 
 </plugin>
