New worklfow task: catchment models

--- a/KalypsoUIRRM/etc/workflow.properties
+++ b/KalypsoUIRRM/etc/workflow.properties
@@ -1,4 +1,4 @@
-timeseriesManagement=Timeseries Management
+timeseriesManagement=Timeseries
 timeseriesManagement_help=
-timeseriesManagement_manageStations=Manage Stations
-timeseriesManagement_manageStations_help=
+catchmentModels=Catchment Models
+catchmentModels_help=
