--- a/trunk/KalypsoModelRCM/.settings/org.eclipse.jdt.ui.prefs
+++ b/trunk/KalypsoModelRCM/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Mon Aug 15 16:45:24 CEST 2011
+#Mon Dec 12 16:18:23 CET 2011
 eclipse.preferences.version=1
 formatter_settings_version=11
 internal.default.compliance=default
