--- a/KalypsoModelNA/build.properties
+++ b/KalypsoModelNA/build.properties
@@ -7,6 +7,5 @@ bin.includes = META-INF/,\
                plugin.properties,\
                etc/catalog.xml
 jars.compile.order = .
-src.includes = readme.txt,\
-               about.html
+src.includes = about.html
 source.. = src/
