--- a/trunk/KalypsoModelNA/plugin.xml
+++ b/trunk/KalypsoModelNA/plugin.xml
@@ -363,6 +363,35 @@
                 qname="{http://kalypso.sorgeforge.net/schemata/hydrology/catchmentModel}CatchmentModel">
           </feature>
      </extension>
+     
+   <extension
+         point="org.kalypso.deegree.featureBinding">
+      <feature
+            class="org.kalypso.model.hydrology.internal.timeseries.binding.StationCollection"
+            qname="{http://kalypso.sorgeforge.net/schemata/hydrology/timeseriesManagement}StationCollection">
+      </feature>
+      <feature
+            class="org.kalypso.model.hydrology.internal.timeseries.binding.HydrologicalStation"
+            qname="{http://kalypso.sorgeforge.net/schemata/hydrology/timeseriesManagement}HydrologicalStation">
+      </feature>
+      <feature
+            class="org.kalypso.model.hydrology.internal.timeseries.binding.MeteorologicalStation"
+            qname="{http://kalypso.sorgeforge.net/schemata/hydrology/timeseriesManagement}MeteorologicalStation">
+      </feature>
+      <feature
+            class="org.kalypso.model.hydrology.internal.timeseries.binding.Timeseries"
+            qname="{http://kalypso.sorgeforge.net/schemata/hydrology/timeseriesManagement}Timeseries">
+      </feature>
+      <feature
+            class="org.kalypso.model.hydrology.internal.timeseries.binding.StationClasses"
+            qname="{http://kalypso.sorgeforge.net/schemata/hydrology/timeseriesManagement}StationClasses">
+      </feature>
+      <feature
+            class="org.kalypso.model.hydrology.internal.timeseries.binding.StationClass"
+            qname="{http://kalypso.sorgeforge.net/schemata/hydrology/timeseriesManagement}StationClass">
+      </feature>
+   </extension>     
+     
      <extension
            point="org.eclipse.wst.xml.core.catalogContributions">
         <catalogContribution>
