--- a/trunk/KalypsoUIRRM/etc/workflow.properties
+++ b/trunk/KalypsoUIRRM/etc/workflow.properties
@@ -1,4 +1,4 @@
 timeseriesManagement=Timeseries
-timeseriesManagement_help=
+timeseriesManagement_help=Timeseries
 catchmentModels=Catchment Models
-catchmentModels_help=
+catchmentModels_help=Catchment Models
