--- a/KalypsoModelNA/etc/schema/gml/11.6/nacontrol.properties
+++ b/KalypsoModelNA/etc/schema/gml/11.6/nacontrol.properties
@@ -1,7 +1,7 @@
 #platform:/resource//WSPMDemo/naModellSchema/nacontrol.xsd
 #Wed Aug 19 13:26:30 CEST 2009
 http___www.opengis.net_gml=gml
-org.kalypso.namodell.control_v2=rrmControl
+org.kalypso.namodell.control=rrmControl
 rrmControl_NAModellControl_description=NAModellControl
 rrmControl_NAModellControl_label=NAModellControl
 rrmControl_NAModellControl_rrmControl_CatchmentsBianf_label=Soil Moisture Correction
