Cleanup of rrm control model

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -26,3 +26,7 @@ modelNet.gmt.kmStrands=Kalinin-Miljukov Strands - Net
 modelNet.gmt.storageStrands=Storage Strands - Net
 modelNet.gmt.subCatchments=Sub-Catchments - Net
 modelNet.gmt.groundwater=Groundwater - Net
+
+control.gft.general=General
+control.gft.simulation=Simulation Management
+control.gft.syntheticPrecipitation=Synthetic precipitation events
